# python-cv-evaluator

./: .gitignore  README.md  pyproject.toml
src/cv_evaluator/: __init__.py  checks.py  cli.py  extractor.py  report.py  scoring.py  utils.py
tests/: test_checks.py  test_cli.py  test_extractor.py
